--- a/TaskService/Web.config
+++ b/TaskService/Web.config
@@ -13,9 +13,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ida:AadInstance" value="https://login.microsoftonline.com/{0}/v2.0/.well-known/openid-configuration?p={1}" />
-    <add key="ida:Tenant" value="fabrikamb2c.onmicrosoft.com" />
-    <add key="ida:ClientId" value="90c0fe63-bcf2-44d5-8fb7-b8bbc0b29dc6" />
-    <add key="ida:SignUpSignInPolicyId" value="b2c_1_susi" />
+    <add key="ida:Tenant" value="rgammonb2c.onmicrosoft.com" />
+    <add key="ida:ClientId" value="80961f74-b4d2-41e9-9c00-d84f357995a4" />
+    <add key="ida:SignUpSignInPolicyId" value="B2C_1_SignInPolicy" />
     <!-- The following settings is used for requesting access tokens -->
     <add key="api:ReadScope" value="read" />
     <add key="api:WriteScope" value="write" />
